server has has cartsRouter and /carts endpoints set up
